--- a/css/layout.css
+++ b/css/layout.css
@@ -146,8 +146,12 @@ ol {
 }
   
 ol li {
-  padding: 0 0 1rem;
+  padding: 0 0 .5rem;
   list-style: disc;
+}
+
+ol li:last-child {
+  padding-bottom: 0;
 }
   
 .btn, input[type=submit], button {
@@ -302,9 +306,15 @@ header div {
 .toolbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 1rem;
   margin-bottom: 2rem;
   align-items: center;
+}
+
+.toolbar .tools {
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
 }
 
 .row {
@@ -321,6 +331,10 @@ section {
   margin: 0 0 4rem;
 }
 
+h3 + .designs, p + .designs {
+  margin-top: -4rem;
+}
+
 .designs {
   display: flex;
   flex-direction: row;
@@ -328,8 +342,8 @@ section {
   width: 100%;
   height: min-content;
   flex-wrap: nowrap;
-  padding-left: calc(50vw - 350px);
-  padding-right: calc(50vw - 350px);
+  padding: 4rem calc(50vw - 350px);
+  margin-top: -2rem;
   transform: translate(calc(350px - 50vw), 0);
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none; /* firefox */
@@ -339,6 +353,13 @@ section {
 
 .designs::-webkit-scrollbar {
   display: none;
+}
+
+.designs img {
+  border-radius: 10px;
+  box-shadow: 0 0 3rem var(--moondust);
+  max-height: 90vh;
+  align-self: center;
 }
 
 .pic, .pic::after {
