--- a/css/preview.css
+++ b/css/preview.css
@@ -67,6 +67,12 @@
     left: 0;    
 }
 
+.mini-preview-loading img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .mini-preview-loading {
     display: flex;
     align-items: center;
