--- a/css/layout.css
+++ b/css/layout.css
@@ -5,8 +5,11 @@
     --pangea: rgba(var(--pangeaRGB));
     --pangea12: rgba(var(--pangeaRGB), 0.12);
     --tan: rgba(194, 187, 171, 1);
-    --cyan: rgba(54, 206, 255, 1);
+    --cyanRGB: 54, 206, 255;
+    --cyan: rgba(var(--cyanRGB));
+    --cyan12: rgba(var(--cyanRGB), 0.12);
     --moondust: rgba(213, 215, 207, 1);
+    --nordo: rgba(246, 246, 242,1);
 
     --eigengrau: 22,22,29;
     --whiter: 255,255,255;
@@ -78,6 +81,12 @@ h1, h2 {
 h3 {
   font-weight: 600;
   margin-bottom: 1rem;
+}
+
+h4 {
+  color: var(--cyan);
+  margin-bottom: 1rem;
+  font-family: var(--codestack);
 }
   
 h5 {
@@ -331,11 +340,9 @@ section {
   margin: 0 0 4rem;
 }
 
-h3 + .designs, p + .designs {
-  margin-top: -4rem;
-}
-
 .designs {
+  background: var(--gray01);
+  box-shadow: 0 1px 0 inset var(--gray03), 0 -1px 0 inset var(--gray03);
   display: flex;
   flex-direction: row;
   gap: 4rem;
@@ -343,7 +350,7 @@ h3 + .designs, p + .designs {
   height: min-content;
   flex-wrap: nowrap;
   padding: 4rem calc(50vw - 350px);
-  margin-top: -2rem;
+  margin-bottom: 2rem;
   transform: translate(calc(350px - 50vw), 0);
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none; /* firefox */
@@ -356,10 +363,13 @@ h3 + .designs, p + .designs {
 }
 
 .designs img {
-  border-radius: 10px;
-  box-shadow: 0 0 3rem var(--moondust);
   max-height: 90vh;
   align-self: center;
+}
+
+.designs .gif {
+  border-radius: 10px;
+  border: 1px solid var(--gray12);
 }
 
 .pic, .pic::after {
