--- a/css/layout.css
+++ b/css/layout.css
@@ -378,9 +378,10 @@ section {
   align-self: center;
 }
 
-.designs .gif {
+.designs .gif, .designs .frame {
   border-radius: 10px;
   border: 1px solid var(--gray12);
+  box-shadow: 0 1px 8px var(--gray12);
 }
 
 .pic, .pic::after {
@@ -452,38 +453,6 @@ footer ul {
 
 footer ul li {
     padding: 0 0 1rem;
-}
-
-  img.blend {
-    mix-blend-mode: darken;
-}
-  
-  figure {
-    padding: 3em 0;
-    text-align: center;
-}
-  
-  figure figcaption {
-    color: var(--gray38);
-    padding: var(--reading) 0;
-    border-radius: 4px;
-    max-width: 448px;
-    margin: 0 auto;
-}
-  
-  figure img {
-    display: inline-block;
-    border-radius: 4px;
-    max-height: 100vh;
-    border: 1px solid rgba(var(--eigengrau), 0.03);
-}
-  
-  figure.research img {
-    max-width: 640px;
-}
-  
-  figure.screen img, figure.research img {
-    border: none;
 }
   
 .hidden {
